add : PWA랑 마스코트 추가 ㅋ

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,17 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🌲 NoteForest</title>
+    
+    <!-- PWA 메타 태그 -->
+    <meta name="description" content="마크다운으로 노트를 작성하고 관리하는 앱입니다." />
+    <meta name="theme-color" content="#2e3440" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="NoteForest" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <!-- Google Fonts for Nord-Dark Theme -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
