fix : 자잘한 UI 개선
시이발 바이브 코딩 남용하면 코드 곱창나네요....

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🌲 NoteForest</title>
+    <title>NoteForest</title>
     
     <!-- PWA 메타 태그 -->
     <meta name="description" content="마크다운으로 노트를 작성하고 관리하는 앱입니다." />
